reduce button width on history page to avoid overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,6 +237,7 @@ footer {
         -webkit-transition: 0.4s;
         -o-transition: 0.4s;
     transition: 0.4s;
+    margin:0 auto;
 }
 
 .card {
@@ -251,11 +252,12 @@ footer {
 
 .card-header {
     background-color: white;
+    margin: 0;
+    padding: 0;
     border: none;
     cursor: pointer;
     padding-bottom: 28px;
     padding-top: 0;
-    margin: 0 auto;
 }
 
 .link-visit-employer {
